<resources>
    <string name="app_name">MyApp</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="ekran" translatable="false">0</string>
    <string name="reset">Reset</string>
    <string name="sw">Switch</string>
    <string name="add">Add</string>
    <string name="singly">singly</string>
    <string name="dou">double</string>
    <string name="btnL">Log In</string>
    <string name="Pass">Password:</string>
    <string name="Na">Name:</string>
    <string name="LogL">Login</string>
    <string name="error_login_empty">the field cannot be empty</string>
    <string name="error_password_empty">the field cannot be empty</string>
    <string name="login_s">login successful</string>
    <string name="login_f">login failed</string>
    <string name="counter">Counter</string>
    <string name="menu">Menu</string>
    <string name="witamy">Witamy %1$s</string>
    <string name="phonewalid">Phone number incorrect</string>
    <string name="buttonPhone">Call</string>
    <string name="GetRandom">Random</string>
    <string name="switchImnage">Gray</string>
    <string name="nsi">Resize photo</string>
    <string name="cpa">Change photo alpha</string>

    <string name="buttonIntent">Intent</string>
    <string name="buttonimage">Image</string>
    <string name="searchID">Invalid String</string>
    <string name="buttonSrch">Search</string>
    <string name="buttonWeb">Open</string>
    <string name="url">Invalid Url</string>
    <string name="locations">Invalid name</string>
    <string name="buttonLocation">Search</string>
    <string name="counter1">Counter</string>
    <string name="intent1">Intent</string>
    <string name="image1">Image</string>
    <string name="list1">List</string>
    <string name="list">List</string>
    <string name="switchchangecolor">Kolorowy</string>
    <string name="switchchangecolor_off">Szary</string>
</resources>