<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_counter"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#121111"
        android:ems="10"
        android:inputType="text"
        android:textColor="#201E1E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#191818"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#100F0F"
        android:textColorHighlight="#1F1C1C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button5"
        android:layout_width="209dp"
        android:layout_height="108dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#4430AD30"
        android:text="@string/btnL"
        android:textAlignment="center"
        android:textColor="#121112"
        android:textColorLink="#6C1A1A"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/password"
        android:layout_width="183dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/Pass"
        android:textAlignment="center"
        android:textColor="#1F1C1C"
        android:textColorHighlight="#121111"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/login"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginTop="64dp"
        android:text="@string/Na"
        android:textAlignment="center"
        android:textColor="#1B1919"
        android:textColorHighlight="#1B1919"
        android:textColorHint="#121111"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="298dp"
        android:layout_height="96dp"
        android:layout_marginTop="80dp"
        android:text="@string/LogL"
        android:textAlignment="center"
        android:textColor="#101010"
        android:textColorHighlight="#191717"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>