<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_counter"
    tools:context=".ImageActivity">

    <ImageView
        android:id="@+id/ImageFish"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="456dp" />

    <Button
        android:id="@+id/randomImageBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C50FE6"
        android:text="@string/GetRandom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Switch
        android:id="@+id/MonoBTN"
        android:layout_width="145dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:text="@string/switchImnage"
        android:textColor="#050505"
        android:textColorHighlight="#040303"
        android:textColorHint="#0D0C0C"
        android:textColorLink="#121111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toEndOf="@+id/randomImageBTN"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <SeekBar
        android:id="@+id/BarGrey"
        android:layout_width="331dp"
        android:layout_height="18dp"
        android:layout_marginTop="64dp"
        android:max="666"
        android:progress="200"
        android:progressTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MonoBTN" />

    <SeekBar
        android:id="@+id/BarAlfa"
        android:layout_width="331dp"
        android:layout_height="18dp"
        android:layout_marginTop="76dp"
        android:max="255"
        android:progress="255"
        android:progressTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BarGrey" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="182dp"
        android:layout_height="27dp"
        android:text="@string/nsi"
        android:textAlignment="center"
        android:textColor="#0D0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/BarGrey"
        app:layout_constraintTop_toBottomOf="@+id/MonoBTN"
        app:layout_constraintVertical_bias="0.621"
        tools:layout_editor_absoluteX="91dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="286dp"
        android:layout_height="37dp"
        android:text="@string/cpa"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/BarAlfa"
        app:layout_constraintTop_toBottomOf="@+id/BarGrey"
        app:layout_constraintVertical_bias="0.512"
        tools:layout_editor_absoluteX="91dp" />
</androidx.constraintlayout.widget.ConstraintLayout>